Revisions to Block Templates - allowing separate captions and texts

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -163,13 +163,13 @@ block_templates.media.media-caption-text = "Caption alongside media"
 block_templates.media.media-caption-text-metadata = "Caption alongside media with additional metadata"
 block_templates.media.media-text-only = "Text block only"
 block_templates.media.media-only = "Media block only"
-block_templates.media.media-text-around-image = "Text around image"
+block_templates.media.media-text-around-image = "Text around media"
 block_templates.media.media-toggle-caption = "Toggle caption"
 block_templates.pageTitle.pt-accent = "Accent"
 
 page_templates.full-width = "Full-width"
 
-page_models.resource_text_uom.label = "Resource with text - Two Media Blocks"
+page_models.resource_text_uom.label = "Caption, media, and separate text block"
 page_models.resource_text_uom.block.0.layout = "blockGroup"
 page_models.resource_text_uom.block.0.layout_data.class = "full-width grid-x padding-1"
 page_models.resource_text_uom.block.1.layout = "heading"
@@ -182,20 +182,20 @@ page_models.resource_text_uom.block.3.layout = "media"
 page_models.resource_text_uom.block.3.data.level = "3"
 page_models.resource_text_uom.block.3.layout_data.class = "small-12 large-5 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_dark.label = "Resource with text - Two Media Blocks - Dark"
+page_models.resource_text_dark.label = "Caption, media, and separate text block - Vertical"
 page_models.resource_text_dark.block.0.layout = "blockGroup"
-page_models.resource_text_dark.block.0.layout_data.class = "full-width dark-background grid-x dark-background padding-1 large-padding-vertical-2 xlarge-padding-vertical-3"
+page_models.resource_text_dark.block.0.layout_data.class = "full-width grid-x padding-1 large-padding-vertical-2 xlarge-padding-vertical-3"
 page_models.resource_text_dark.block.1.layout = "heading"
 page_models.resource_text_dark.block.1.data.level = "1"
 page_models.resource_text_dark.block.1.layout_data.class = "small-12 grid-container margin-bottom-1"
 page_models.resource_text_dark.block.2.layout = "media"
 page_models.resource_text_dark.block.2.data.level = "2"
-page_models.resource_text_dark.block.2.layout_data.class = "small-12 large-7 flex-container align-center align-middle padding-horizontal-1 large-padding-horizontal-2"
+page_models.resource_text_dark.block.2.layout_data.class = "small-12 flex-container align-center align-middle padding-horizontal-1 large-padding-horizontal-2"
 page_models.resource_text_dark.block.3.layout = "media"
 page_models.resource_text_dark.block.3.data.level = "3"
-page_models.resource_text_dark.block.3.layout_data.class = "small-12 large-5 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
+page_models.resource_text_dark.block.3.layout_data.class = "small-12 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid.label = "Media with caption and text"
+page_models.resource_text_grid.label = "Media with caption as text"
 page_models.resource_text_grid.block.0.layout = "blockGroup"
 page_models.resource_text_grid.block.0.layout_data.class = "full-width resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid.block.1.layout = "heading"
@@ -208,7 +208,7 @@ page_models.resource_text_grid.block.3.layout = "html"
 page_models.resource_text_grid.block.3.data.level = "3"
 page_models.resource_text_grid.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid_dark.label = "Media with caption and text - dark background"
+page_models.resource_text_grid_dark.label = "Media with caption as text - dark background"
 page_models.resource_text_grid_dark.block.0.layout = "blockGroup"
 page_models.resource_text_grid_dark.block.0.layout_data.class = "full-width dark-background resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_dark.block.1.layout = "heading"
@@ -221,7 +221,7 @@ page_models.resource_text_grid_dark.block.3.layout = "html"
 page_models.resource_text_grid_dark.block.3.data.level = "3"
 page_models.resource_text_grid_dark.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid_right.label = "Media with caption and text - media right"
+page_models.resource_text_grid_right.label = "Media with caption as text - media right"
 page_models.resource_text_grid_right.block.0.layout = "blockGroup"
 page_models.resource_text_grid_right.block.0.layout_data.class = "full-width resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2 mediaRightGrid"
 page_models.resource_text_grid_right.block.1.layout = "heading"
@@ -234,7 +234,7 @@ page_models.resource_text_grid_right.block.3.layout = "html"
 page_models.resource_text_grid_right.block.3.data.level = "3"
 page_models.resource_text_grid_right.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid_portrait.label = "Media with caption and text - portrait"
+page_models.resource_text_grid_portrait.label = "Media with caption as text - portrait"
 page_models.resource_text_grid_portrait.block.0.layout = "blockGroup"
 page_models.resource_text_grid_portrait.block.0.layout_data.class = "full-width portrait resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_portrait.block.1.layout = "heading"
@@ -247,7 +247,7 @@ page_models.resource_text_grid_portrait.block.3.layout = "html"
 page_models.resource_text_grid_portrait.block.3.data.level = "3"
 page_models.resource_text_grid_portrait.block.3.layout_data.class = "padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_grid_container.label = "Media with caption and text - container"
+page_models.resource_text_grid_container.label = "Media with caption as text - container"
 page_models.resource_text_grid_container.block.0.layout = "blockGroup"
 page_models.resource_text_grid_container.block.0.layout_data.class = "resourceTextGrid padding-vertical-1 large-padding-vertical-2 xlarge-padding-vertical-3 margin-vertical-1 large-vertical-2"
 page_models.resource_text_grid_container.block.1.layout = "heading"
