Added final caption-text template

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - MDE"
-version = "1.4.0.5588"
+version = "1.4.0.5589"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation"
@@ -169,7 +169,7 @@ block_templates.pageTitle.pt-accent = "Accent"
 
 page_templates.full-width = "Full-width"
 
-page_models.resource_text_uom.label = "Caption, media, and separate text block"
+page_models.resource_text_uom.label = "Caption, media, and text block"
 page_models.resource_text_uom.block.0.layout = "blockGroup"
 page_models.resource_text_uom.block.0.layout_data.class = "full-width grid-x padding-1"
 page_models.resource_text_uom.block.1.layout = "heading"
@@ -182,7 +182,7 @@ page_models.resource_text_uom.block.3.layout = "media"
 page_models.resource_text_uom.block.3.data.level = "3"
 page_models.resource_text_uom.block.3.layout_data.class = "small-12 large-5 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
 
-page_models.resource_text_dark.label = "Caption, media, and separate text block - Vertical"
+page_models.resource_text_dark.label = "Caption, media, and text block - vertical"
 page_models.resource_text_dark.block.0.layout = "blockGroup"
 page_models.resource_text_dark.block.0.layout_data.class = "full-width grid-x padding-1 large-padding-vertical-2 xlarge-padding-vertical-3"
 page_models.resource_text_dark.block.1.layout = "heading"
@@ -194,6 +194,19 @@ page_models.resource_text_dark.block.2.layout_data.class = "small-12 flex-contai
 page_models.resource_text_dark.block.3.layout = "media"
 page_models.resource_text_dark.block.3.data.level = "3"
 page_models.resource_text_dark.block.3.layout_data.class = "small-12 flex-container align-center padding-horizontal-1 large-padding-horizontal-2"
+
+page_models.resource_text_uom_title.label = "Caption, media, and text block - title under media"
+page_models.resource_text_uom_title.block.0.layout = "blockGroup"
+page_models.resource_text_uom_title.block.0.layout_data.class = "full-width grid-x padding-1"
+page_models.resource_text_uom_title.block.1.layout = "heading"
+page_models.resource_text_uom_title.block.1.data.level = "1"
+page_models.resource_text_uom_title.block.1.layout_data.class = "small-12 grid-container margin-bottom-1"
+page_models.resource_text_uom_title.block.2.layout = "media"
+page_models.resource_text_uom_title.block.2.data.level = "2"
+page_models.resource_text_uom_title.block.2.layout_data.class = "small-12 large-7 flex-container align-center align-middle padding-horizontal-1 large-padding-horizontal-2"
+page_models.resource_text_uom_title.block.3.layout = "html"
+page_models.resource_text_uom_title.block.3.data.level = "3"
+page_models.resource_text_uom_title.block.3.layout_data.class = "small-12 large-5 flex-container align-center align-middle padding-horizontal-1 large-padding-horizontal-2"
 
 page_models.resource_text_grid.label = "Media with caption as text"
 page_models.resource_text_grid.block.0.layout = "blockGroup"
