--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - MDE"
-version = "1.4.0.561"
+version = "1.4.0.562"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation"
@@ -147,6 +147,7 @@ block_templates.asset.a-hero-image = "Hero with title only"
 block_templates.asset.a-hero-image-title-caption = "Hero with title and caption"
 block_templates.browsePreview.bp-list = "List"
 block_templates.browsePreview.bp-grid = "Grid"
+block_templates.browsePreview.bp-masonry = "Masonry Grid"
 block_templates.browsePreview.bp-toggle-grid = "Toggle (default: grid)"
 block_templates.browsePreview.bp-toggle-list = "Toggle (default: list)"
 block_templates.itemWithMetadata.iwm-large-media-left = "Large Media Left"
