--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - MDE"
-version = "1.4.0.5633"
+version = "1.4.0.5634"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation"
@@ -141,6 +141,7 @@ resource_page_blocks.media.main[] = "values"
 
 block_templates.asset.asset-hero-large-dark-bottom = "Asset Hero Large Bottom"
 block_templates.asset.a-card = "Card"
+block_templates.asset.a-card-home = "Home page card"
 block_templates.asset.a-caption = "Asset with Caption"
 block_templates.asset.a-media-object = "Media Object"
 block_templates.asset.a-hero-image = "Hero with title only"
@@ -154,6 +155,8 @@ block_templates.itemWithMetadata.iwm-large-media-left = "Large Media Left"
 block_templates.itemWithMetadata.iwm-large-media-right = "Large Media Right"
 block_templates.listOfPages.lop-container = "With Container"
 block_templates.listOfSites.los-card = "Card"
+block_templates.listOfSites.los-home = "Home"
+block_templates.listOfSites.los-card-dynamic = "Dynamic"
 block_templates.html.html-text = "Text"
 block_templates.html.html-text-lead = "Larger Text"
 block_templates.html.html-text-dark = "Text Dark Background"
