Added classification blocks for home page

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -157,6 +157,9 @@ block_templates.listOfPages.lop-container = "With Container"
 block_templates.listOfSites.los-card = "Card"
 block_templates.listOfSites.los-home = "Home"
 block_templates.listOfSites.los-card-dynamic = "Dynamic"
+block_templates.listOfSites.los-card-featured = "Featured Sites"
+block_templates.listOfSites.los-card-library-sites = "Library Sites"
+block_templates.listOfSites.los-card-external-sites = "External Sites"
 block_templates.html.html-text = "Text"
 block_templates.html.html-text-lead = "Larger Text"
 block_templates.html.html-text-dark = "Text Dark Background"
