--- a/config/theme.ini
+++ b/config/theme.ini
@@ -158,8 +158,8 @@ block_templates.listOfSites.los-card = "Card"
 block_templates.listOfSites.los-home = "Home"
 block_templates.listOfSites.los-card-dynamic = "Dynamic"
 block_templates.listOfSites.los-card-featured = "Featured Sites"
-block_templates.listOfSites.los-card-library-sites = "Library Sites"
-block_templates.listOfSites.los-card-external-sites = "External Sites"
+block_templates.listOfSites.los-card-library = "Library Sites"
+block_templates.listOfSites.los-card-external = "External Sites"
 block_templates.html.html-text = "Text"
 block_templates.html.html-text-lead = "Larger Text"
 block_templates.html.html-text-dark = "Text Dark Background"
