Removed Latest Scrollbox and testing LOS Stats block

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -161,6 +161,7 @@ block_templates.listOfSites.los-card-featured = "Featured Sites"
 block_templates.listOfSites.los-card-library = "Library Sites"
 block_templates.listOfSites.los-card-external = "External Sites"
 block_templates.listOfSites.los-card-featured-js = "Testing featured JS"
+block_templates.listOfSites.los-stats = "MDE Stats"
 block_templates.html.html-text = "Text"
 block_templates.html.html-text-lead = "Larger Text"
 block_templates.html.html-text-dark = "Text Dark Background"
