Added Browse options to Home Page

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -154,8 +154,9 @@ block_templates.browsePreview.bp-toggle-list = "Toggle (default: list)"
 block_templates.itemWithMetadata.iwm-large-media-left = "Large Media Left"
 block_templates.itemWithMetadata.iwm-large-media-right = "Large Media Right"
 block_templates.listOfPages.lop-container = "With Container"
-block_templates.listOfSites.los-card = "Card"
 block_templates.listOfSites.los-home = "Home"
+block_templates.listOfSites.los-card = "Card"
+block_templates.listOfSites.los-browse = "Browse"
 block_templates.listOfSites.los-card-dynamic = "Dynamic"
 block_templates.listOfSites.los-card-featured = "Featured Sites"
 block_templates.listOfSites.los-card-library = "Library Sites"
