--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
 name = "Foundation - MDE"
-version = "1.4.0.56481"
+version = "1.4.0.56482"
 author = "Omeka Team and John McCrory"
 description = "A starter theme using version 1.3.5 of the ZURB Foundation toolkit, updated for Omeka S v4.0. Based on v1.3.3 of the Omeka S Foundation theme. Annona IIIF storyboard feature enabled, and includes language selector (optimised for two languages). Elements of code for language selector from Ivy Rose's Multilingual theme: https://github.com/ivyrze/omeka-s-theme-multilingual"
 theme_link = "https://github.com/omeka-s-themes/foundation"
@@ -160,7 +160,9 @@ block_templates.listOfSites.los-card = "Card"
 block_templates.listOfSites.los-card-dynamic = "Dynamic"
 block_templates.listOfSites.los-card-featured = "Featured Sites"
 block_templates.listOfSites.los-card-library = "Library Sites"
+block_templates.listOfSites.los-card-library-limit = "Library Sites Limit"
 block_templates.listOfSites.los-card-external = "External Sites"
+block_templates.listOfSites.los-card-external-limit = "External Sites Limit"
 block_templates.listOfSites.los-card-featured-js = "Testing featured JS"
 block_templates.listOfSites.los-stats = "MDE Stats"
 block_templates.html.html-text = "Text"
