Refined site browse options

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -159,11 +159,13 @@ block_templates.listOfSites.los-browse = "Browse sites"
 block_templates.listOfSites.los-card = "Card"
 block_templates.listOfSites.los-card-dynamic = "Dynamic"
 block_templates.listOfSites.los-card-featured = "Featured Sites"
-block_templates.listOfSites.los-card-featured-mosaic = "Featured Sites Mosaic"
+block_templates.listOfSites.los-card-featured-mosaic = "Featured Sites - Mosaic"
 block_templates.listOfSites.los-card-library = "Library Sites"
-block_templates.listOfSites.los-card-library-mosaic = "Library Sites Mosaic"
+block_templates.listOfSites.los-card-library-mosaic = "Library Sites - Mosaic"
+block_templates.listOfSites.los-card-library-browse = "Library Sites - Browse All"
 block_templates.listOfSites.los-card-external = "External Sites"
-block_templates.listOfSites.los-card-external-mosaic = "External Sites Mosaic"
+block_templates.listOfSites.los-card-external-mosaic = "External Sites - Mosaic"
+block_templates.listOfSites.los-card-external-browse = "External Sites - Browse All"
 block_templates.listOfSites.los-card-featured-js = "Testing featured JS"
 block_templates.listOfSites.los-stats = "MDE Stats"
 block_templates.html.html-text = "Text"
